# WangDaoOJ

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  manage.py  pyproject.toml
backend/oj_platform/: settings.py  urls.py  wsgi.py
backend/problems/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/problems/management/commands/: seed_demo.py
backend/problems/migrations/: 0001_initial.py
backend/submissions/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/submissions/migrations/: 0001_initial.py
docs/: requirements.md  technical-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
scripts/: configure_postgres_auth.sh  configure_postgres_socket_only.sh  run_backend_wsl.sh  setup_backend_wsl.sh  setup_wsl.sh  start_services_wsl.sh
